--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -10,3 +10,4 @@ import Globals from 'gatsby-theme-carbon/src/templates/Globals';
 </PageDescription>
 
 ## **Overview**
+This recipe shows how one can share data stored on tiered block storage across computes in availability zones in IBM Cloud. It makes use of SSH file system based on FUSE for mounting remote directories over an SSH connection. 
