--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -10,3 +10,16 @@ import Globals from 'gatsby-theme-carbon/src/templates/Globals';
 </PageDescription>
 
 ## **Overview**
+This recipe shows how one can share data stored on tiered block storage across computes in availability zones in IBM Cloud. It makes use of SSH file system based on FUSE for mounting remote directories over an SSH connection. 
+
+## Introduction
+
+There might be situations where customer scenario would require sharing of tiered block storage volumes of varied IOPS to be shared across computes in different availability zones. This article leverages SSHFS to overcome this limitation using a very basic service of SSH which is availabile across operating systems flavours. This recipe is specific to IBM Cloud VPC network construct.
+
+Note: There currently is not NFS offering in VPC, but one can setup NFS servers and clients and manage them. In this article we are using sshfs instead of NFS to share a partition from one VSI to other VSIs in different regions.
+
+## Architecture
+
+This recipe is based on Implementing below architecture where in block storage for VPC is mounted on virtual server based out of Dallas 1 zone. This volume is then mounted on virtual servers in zones – Dallas2 and Dallas3. So whatever data is written to Dallas1 volume is replicated to Dallas2 and Dallas3. I will take virtual server hosted in Dallas1 data center as primary server or master, where as servers hosted on Dallas2 and Dallas3 as secondary servers or Slaves.
+
+![Alt text](/screen_shots/Screenshot_5.png?raw=true "Simple Code on IPython Notebooks")
