--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -17,3 +17,8 @@ VPE is an evolution of the private connectivity to IBM Cloud services. VPEs are 
 For more details refer: https://cloud.ibm.com/docs/vpc?topic=vpc-about-vpe
 
 In this recipe I will start with a reference architecture start which I will Implement to conform to certain use case.
+
+## Use Cases
+In this use case I will be sharing the data across availability zones in VPC and DR site using IBM Cloud object storage where in DC is located in Dallas region and DR is located in Washington region. I will mount cloud object storage bucket across regions and within region to actively share the data.
+
+## VPC - DC and DR Architecture
