--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -22,3 +22,4 @@ In this recipe I will start with a reference architecture start which I will Imp
 In this use case I will be sharing the data across availability zones in VPC and DR site using IBM Cloud object storage where in DC is located in Dallas region and DR is located in Washington region. I will mount cloud object storage bucket across regions and within region to actively share the data.
 
 ## VPC - DC and DR Architecture
+![Alt text](/images/Arch_Plain.jpg?raw=true "Simple Code on IPython Notebooks")
