--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -24,3 +24,5 @@ In this use case I will be sharing the data across availability zones in VPC and
 ## VPC - DC and DR Architecture
 ![keymanagement with openshift-1](images/Arch_Plain.jpg)
 
+## DC Implementation Architecture in IBM Cloud Console
+![keymanagement with openshift-1](images/VPC_Layout.jpg)
