--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -26,3 +26,8 @@ In this use case I will be sharing the data across availability zones in VPC and
 
 ## DC Implementation Architecture in IBM Cloud Console
 ![keymanagement with openshift-1](images/VPC_Layout.jpg)
+
+## DR Implementation Architecture in IBM Cloud Console
+![keymanagement with openshift-1](images/VPC_DR_Layout.jpg)
+
+
