--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -34,15 +34,15 @@ In this use case I will be sharing the data across availability zones in VPC and
 
 IBM Cloud® Virtual Private Endpoint (VPE) for IBM Cloud™ Virtual Private Cloud provides connection points to IBM services on the IBM private network from your VPC network. VPE has multiple benefits like:
 
-    Public connectivity is not required and has no public data egress charges.
-    Reaches IBM Cloud assets through a private service provider.
-    A VPE lives in your network address space, extending your private and multicloud into the IBM Cloud.
-    You can apply security through Network Access Control Lists (NACLs).
-    The endpoint IP deploys in a customer-defined, virtual network.
-    Includes platform integration to VPC – Identity and Access Management (IAM), network ACLs, and tagging.
-    Access to new endpoints is achieved through the UI, CLI, and API.
-    You can map a new endpoint to an existing service, as well as map to a shared endpoint.
-    Integrates with DNS Services.
+    1. Public connectivity is not required and has no public data egress charges.
+    2. Reaches IBM Cloud assets through a private service provider.
+    3. A VPE lives in your network address space, extending your private and multicloud into the IBM Cloud.
+    4. You can apply security through Network Access Control Lists (NACLs).
+    5. The endpoint IP deploys in a customer-defined, virtual network.
+    6. Includes platform integration to VPC – Identity and Access Management (IAM), network ACLs, and tagging.
+    7. Access to new endpoints is achieved through the UI, CLI, and API.
+    8. You can map a new endpoint to an existing service, as well as map to a shared endpoint.
+    9 Integrates with DNS Services.
 
  
 
