--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -50,3 +50,9 @@ The COS bucket is already set up in US region as multi-region and to share bucke
 
 ## Step1
 ![keymanagement with openshift-1](images/VPE_gateway.jpg)
+
+## Step2
+![keymanagement with openshift-1](images/VPE2.jpg)
+
+## Step3
+![keymanagement with openshift-1](images/VPE3.jpg)
