--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -56,3 +56,12 @@ The COS bucket is already set up in US region as multi-region and to share bucke
 
 ## Step3
 ![keymanagement with openshift-1](images/VPE3.jpg)
+
+## Step4
+![keymanagement with openshift-1](images/VPE4.jpg)
+
+## Step5
+![keymanagement with openshift-1](images/VPE5.jpg)
+
+
+
