--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -74,7 +74,12 @@ VPE uses direct end-points as shown in the above screen shot. This service endpo
 ![keymanagement with openshift-1](images/COS_0.jpg)
 
 Since I have created Cross region COS, I will select the region where my bucket is located which is US in current scenario.
-![keymanagement with openshift-1](images/COS_1.jpg)
+![keymanagement with openshift-1](images/COS_5.jpg)
+
+Since in the scenario DC is in Dallas and DR is Washington, select and copy direct end-point URL for both and keep it for reference
+![keymanagement with openshift-1](images/COS_6.jpg)
+
+
 
 
 
