--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -79,7 +79,9 @@ Since I have created Cross region COS, I will select the region where my bucket 
 Since in the scenario DC is in Dallas and DR is Washington, select and copy direct end-point URL for both and keep it for reference
 ![keymanagement with openshift-1](images/COS_6.jpg)
 
-
+## Architecture after VPE is Created
+After the VPE is created, we will have a direct private end-point for COS bucket. We are now going to mount this bucket on POSIX file system dirctory in Linux as shown below. The below architetcure depicts accessibility of bucket through VPE.
+![keymanagement with openshift-1](images/Arch_ver3.jpg)
 
 
 
