--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -81,6 +81,7 @@ Since in the scenario DC is in Dallas and DR is Washington, select and copy dire
 
 ## Architecture after VPE is Created
 After the VPE is created, we will have a direct private end-point for COS bucket. We are now going to mount this bucket on POSIX file system dirctory in Linux as shown below. The below architetcure depicts accessibility of bucket through VPE.
+![keymanagement with openshift-1](images/COS_6.jpg)
 ![keymanagement with openshift-1](images/Architecturecos.jpg)
 
 
