--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -81,9 +81,12 @@ Since in the scenario DC is in Dallas and DR is Washington, select and copy dire
 
 ## Architecture after VPE is Created
 After the VPE is created, we will have a direct private end-point for COS bucket. We are now going to mount this bucket on POSIX file system dirctory in Linux as shown below. The below architetcure depicts accessibility of bucket through VPE.
-![keymanagement with openshift-1](images/COS_9.jpg)
+![keymanagement with openshift-1](images/COS_9.jpg)   -- Not Working
 
+## Mounting Bucket in Virtual Servers on DC and DR Sites
+Now we have reached the final step of the article where I will be mounting the bucket into Virtual servers in DC spanned across subnets and DR witin one subnet. Before we start with mounting few pre-requisite libraries would need to be Installed.
 
+ 
 
 
 
