--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -86,7 +86,7 @@ After the VPE is created, we will have a direct private end-point for COS bucket
 ## Mounting Bucket in Virtual Servers on DC and DR Sites
 Now we have reached the final step of the article where I will be mounting the bucket into Virtual servers in DC spanned across subnets and DR witin one subnet. Before we start with mounting few pre-requisite libraries would need to be Installed.
 
- 
+ ![keymanagement with openshift-1](images/COS_1.jpg) 
 
 
 
