--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -88,5 +88,8 @@ Now we have reached the final step of the article where I will be mounting the b
 
  ![keymanagement with openshift-1](images/COS_1.jpg) 
 
+![keymanagement with openshift-1](images/COS_2.jpg) 
 
+Once these are Installed we need to create a credential file in home directory with credentials in the format as below:
 
+![keymanagement with openshift-1](images/COS_7.jpg) 
