--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -93,3 +93,10 @@ Now we have reached the final step of the article where I will be mounting the b
 Once these are Installed we need to create a credential file in home directory with credentials in the format as below:
 
 ![keymanagement with openshift-1](images/COS_7.jpg) 
+
+![keymanagement with openshift-1](images/COS_8.jpg) 
+
+The ACCESS_KEY_ID key and SECRET_ACCESS_KEY_ID can be found in bucket configuration.
+
+![keymanagement with openshift-1](images/COS_3.jpg) 
+
