--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -100,3 +100,6 @@ The ACCESS_KEY_ID key and SECRET_ACCESS_KEY_ID can be found in bucket configurat
 
 ![keymanagement with openshift-1](images/COS_3.jpg) 
 
+Run chmod 600 .passwd-s3fs command on the file, else one would get a permission error on runing mount command.
+
+![keymanagement with openshift-1](images/permission_error.jpg) 
