--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -102,4 +102,14 @@ The ACCESS_KEY_ID key and SECRET_ACCESS_KEY_ID can be found in bucket configurat
 
 Run chmod 600 .passwd-s3fs command on the file, else one would get a permission error on runing mount command.
 
-![keymanagement with openshift-1](images/permission_error.jpg) 
+![keymanagement with openshift-1](images/permission_error.jpg)  -- Not Working
+
+Create a directory where you would like to mount bucket which in my case is “/mycosbucket”. One can create this directory through mkdir command.
+
+After the above steps run the command to mount the bucket on POSIX directory.
+
+**s3fs my-bucket-4566 /mycosbucket -o passwd_file=~/.passwd-s3fs -o url=https://s3.direct.dal.us.cloud-object-storage.appdomain.cloud**
+
+and browse the mounted directory to verify its content:
+
+
