--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -112,4 +112,4 @@ After the above steps run the command to mount the bucket on POSIX directory.
 
 and browse the mounted directory to verify its content:
 
-
+![keymanagement with openshift-1](images/command.jpg) 
