--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -125,5 +125,9 @@ To make mount permanent even after VSI reboot, enter below entry in /etc/fstab d
 
 Reboot the machine to verify persistence of the mounted bucket. Finally the architecture would look like as below.
 
-![keymanagement with openshift-1](images/Arch_ver1.jpg) 
+![keymanagement with openshift-1](images/Arch_ver1.jpg) -- Not Working
+
+## Testing the Configuration
+Now we have mounted COS bucket in DC on VSI across availability zones and in DR VPC in single AZ, lets verify whether files are shared across consistently or not.
+![keymanagement with openshift-1](images/Testing1.jpg)
 
