--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -129,5 +129,5 @@ Reboot the machine to verify persistence of the mounted bucket. Finally the arch
 
 ## Testing the Configuration
 Now we have mounted COS bucket in DC on VSI across availability zones and in DR VPC in single AZ, lets verify whether files are shared across consistently or not.
-![keymanagement with openshift-1](images/Testing1.jpg)
+![keymanagement with openshift-1](images/Testing1.jpg) -- Not Working
 
