--- a/src/pages/ibmcloud/vpc-vpe/index.mdx
+++ b/src/pages/ibmcloud/vpc-vpe/index.mdx
@@ -131,3 +131,4 @@ Reboot the machine to verify persistence of the mounted bucket. Finally the arch
 Now we have mounted COS bucket in DC on VSI across availability zones and in DR VPC in single AZ, lets verify whether files are shared across consistently or not.
 ![keymanagement with openshift-1](images/Testing1.jpg) -- Not Working
 
+This shows data is synchronized across zones and regions which are participating in DC and DR in our solution.
